doing layout boolzapp

--- a/index.html
+++ b/index.html
@@ -11,11 +11,52 @@
     <link rel="stylesheet" href="css/style.css">
     <title>BOOLZAPP</title>
 </head>
-<body>
+<body class="position-relative">
+    <section class="body-top-bg">
 
+    </section>
+    <section class="body-bottom-bg">
+
+    </section>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 
     <div id="app">
+
+        <section class="chat-container bg-info position-absolute">
+
+            <section class="left-container">
+
+            </section>
+
+
+
+
+
+
+            <section class="right-container">
+
+            </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        </section>
 
     
 
