added scheme layout to the left container

--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
         <section class="chat-container bg-info position-absolute">
 
             <section class="left-container">
+                <div class="profile">
+
+                </div>
+                <div class="notifications">
+
+                </div>
+                <div class="research">
+
+                </div>
+                <div class="contacts overflow-scroll"> <!--QUI ANDRA' MESSO IL V-FOR CON TUTTI I CONTATTI-->
+
+                </div>
 
             </section>
 
@@ -34,6 +46,16 @@
 
 
             <section class="right-container">
+
+                <div>
+
+                </div>
+                <div>
+
+                </div>
+                <div>
+
+                </div>
 
             </section>
 
