added scheme layout to the right-container

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
 
             <section class="right-container">
 
-                <div>
+                <div class="selected-profile">
 
                 </div>
-                <div>
+                <div class="message overflow-scroll">
 
                 </div>
-                <div>
+                <div class="chat">
 
                 </div>
 
