--- a/index.html
+++ b/index.html
@@ -47,7 +47,27 @@
 
             <section class="right-container">
 
-                <div class="selected-profile">
+                <div class="selected-profile d-flex justify-content-between align-items-center p-1">
+                    <div class="d-flex">
+                        <div class="circle-profile-layout me-2">
+                            <img class="rounded-circle" src="img/avatar_1.jpg" alt="">
+                        </div>
+                        <div class="d-flex flex-column">
+                            <p class="m-0">
+                                Michele
+                            </p>
+                            <span class="last-access"s>
+                                Ultimo accesso oggi alle 12:00
+                            </span>
+                        </div>
+                    </div>
+                    <div class="d-flex">
+
+                        <a href="#"><i class="fa-solid fa-magnifying-glass ms-3" style="color: #d6d6d6;"></i></a>
+                        <a href="#"><i class="fa-solid fa-paperclip ms-3" style="color: #e0e0e0;"></i></a>
+                        <a href="#"><i class="fa-solid fa-ellipsis-vertical ms-3" style="color: #d6d6d6;"></i></a>
+
+                    </div>
 
                 </div>
                 <div class="message overflow-scroll">
