done right container layout

--- a/index.html
+++ b/index.html
@@ -63,28 +63,28 @@
                     </div>
                     <div class="d-flex">
 
-                        <a href="#"><i class="fa-solid fa-magnifying-glass ms-3" style="color: #d6d6d6;"></i></a>
-                        <a href="#"><i class="fa-solid fa-paperclip ms-3" style="color: #e0e0e0;"></i></a>
-                        <a href="#"><i class="fa-solid fa-ellipsis-vertical ms-3" style="color: #d6d6d6;"></i></a>
+                        <a href="#"><i class="fa-solid fa-magnifying-glass ms-3" style="color:#aeb0b1;"></i></a>
+                        <a href="#"><i class="fa-solid fa-paperclip ms-3" style="color:#aeb0b1;"></i></a>
+                        <a href="#"><i class="fa-solid fa-ellipsis-vertical ms-3" style="color: #aeb0b1;"></i></a>
 
                     </div>
 
                 </div>
                 <div class="message overflow-scroll py-4 px-5">
                     <div class="row d-flex">
-                        <div class="col-6" style="margin-top: 9rem;">
-                            <div class="white-message bg-white w-75 rounded-3 p-2">
+                        <div class="col-6 pe-5" style="margin-top: 9rem;">
+                            <div class="white-message bg-white w-100 rounded-3 p-2">
                                 <p class="m-0">Tutto fatto!</p>
 
                             </div>
                         </div>
-                        <div class="col-6">
+                        <div class="col-6 ps-5">
 
-                            <div class="green-message bg-success w-75 rounded-3 p-2 mb-2">
+                            <div class="green-message bg-success w-100 rounded-3 p-2 mb-2">
                                 <p class="m-0">Hai portato il cane a casa?</p>
                                 
                             </div>
-                            <div class="green-message bg-success w-75 rounded-3 p-2 mb-2">
+                            <div class="green-message bg-success w-100 rounded-3 p-2 mb-2">
                                 
                                 <p class="m-0">Ricordati di stendere i panni</p>
 
@@ -94,7 +94,18 @@
                     </div>
 
                 </div>
-                <div class="chat">
+                <div class="chat d-flex align-items-center justify-content-around w-100">
+
+                    <div class="w-auto">
+                        <i class="fa-regular fa-face-smile" style="color: #949494;"></i>
+
+                    </div>
+                    <div class="w-75">
+                        <input class="w-100 p-1" type="text" placeholder="Scrivi un messaggio" style="font-size: small;">
+                    </div>
+                    <div class="w-auto">
+                        <i class="fa-solid fa-microphone" style="color: #9e9e9e;"></i>
+                    </div>
 
                 </div>
 
