--- a/index.html
+++ b/index.html
@@ -25,8 +25,23 @@
         <section class="chat-container bg-info position-absolute">
 
             <section class="left-container">
-                <div class="profile">
-
+                <div class="profile container d-flex align-items-center justify-content-between">
+                    <div class="d-flex align-items-center">
+                        <div class="circle-profile-layout me-2">
+                            <img class="rounded-circle" src="img/avatar_io.jpg" alt="">
+                        </div>
+                        <div class="d-flex flex-column">
+                            <p class="m-0">
+                                Sofia
+                            </p>
+                        </div>
+                        
+                    </div>
+                    <div>
+                        <a href="#"><i class="fa-solid fa-magnifying-glass ms-3" style="color:#aeb0b1;"></i></a>
+                        <a href="#"><i class="fa-solid fa-paperclip ms-3" style="color:#aeb0b1;"></i></a>
+                        <a href="#"><i class="fa-solid fa-ellipsis-vertical ms-3" style="color: #aeb0b1;"></i></a>
+                    </div>
                 </div>
                 <div class="notifications">
 
@@ -47,7 +62,7 @@
 
             <section class="right-container">
 
-                <div class="selected-profile d-flex justify-content-between align-items-center p-1">
+                <div class="selected-profile container d-flex justify-content-between align-items-center ">
                     <div class="d-flex">
                         <div class="circle-profile-layout me-2">
                             <img class="rounded-circle" src="img/avatar_1.jpg" alt="">
