--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
                         
                     </div>
                     <div>
-                        <a href="#"><i class="fa-solid fa-magnifying-glass ms-3" style="color:#aeb0b1;"></i></a>
-                        <a href="#"><i class="fa-solid fa-paperclip ms-3" style="color:#aeb0b1;"></i></a>
-                        <a href="#"><i class="fa-solid fa-ellipsis-vertical ms-3" style="color: #aeb0b1;"></i></a>
+                        <a href="#"><i class="fa-solid fa-circle-notch ms-3" style="color: #aeb0b1;"></i></i></a>
+                        <a href="#"><i class="fa-solid fa-message ms-3" style="color:#aeb0b1;"></i></a>
+                        <a href="#"><i class="fa-solid fa-ellipsis-vertical ms-3" style="color:#aeb0b1;"></i></a>
                     </div>
                 </div>
                 <div class="notifications d-flex align-items-center container">
@@ -69,7 +69,7 @@
                       
                 </div>
 
-                <div class="contacts overflow-scroll"> <!--QUI ANDRA' MESSO IL V-FOR CON TUTTI I CONTATTI-->
+                <div class="contacts"> <!--QUI ANDRA' MESSO IL V-FOR CON TUTTI I CONTATTI-->
                     <div class="d-flex justify-content-between container p-2 selected" v-for="(item, index) in contacts">
 
                         <div class="d-flex">
@@ -127,7 +127,7 @@
                     </div>
 
                 </div>
-                <div class="message overflow-scroll py-4 px-5">
+                <div class="message py-4 px-5">
                     <div class="row d-flex">
                         <div class="col-6 pe-5" style="margin-top: 9rem;">
                             <div class="white-message d-flex justify-content-between bg-white w-100 rounded-3 p-2">
@@ -173,8 +173,8 @@
                         <i class="fa-regular fa-face-smile" style="color: #949494;"></i>
 
                     </div>
-                    <div class="w-75">
-                        <input class="w-100 p-1" type="text" placeholder="Scrivi un messaggio" style="font-size: small;">
+                    <div class="w-75 h-100 d-flex align-items-center">
+                        <input class="w-100 h-75 border-0 rounded-1 p-1" type="text" placeholder="Scrivi un messaggio" style="font-size: small;">
                     </div>
                     <div class="w-auto">
                         <i class="fa-solid fa-microphone" style="color: #9e9e9e;"></i>
