--- a/index.html
+++ b/index.html
@@ -104,29 +104,36 @@
 
             <section class="right-container">
 
-                <div class="selected-profile container d-flex justify-content-between align-items-center ">
-                    <div class="d-flex">
-                        <div class="circle-profile-layout rounded-5 me-2">
-                            <img class="rounded-circle" src="img/avatar_1.jpg" alt="">
+                
+
+                    <div class="selected-profile container"  v-for="(item, index) in contacts">
+                 
+                        <div class="d-flex justify-content-between align-items-center" v-if = "index === 0">     
+                            <div class="d-flex">
+                                <div class="circle-profile-layout rounded-5 me-2">
+                                    <img class="rounded-circle" :src="contacts[index].avatar" alt="">
+                                </div>
+                                <div class="d-flex flex-column">
+                                    <p class="m-0">
+                                        {{item.name}}
+                                    </p>
+                                    <span class="last-access">
+                                        Ultimo accesso oggi alle 12:00
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="d-flex">
+
+                                <a href="#"><i class="fa-solid fa-magnifying-glass ms-3" style="color:#aeb0b1;"></i></a>
+                                <a href="#"><i class="fa-solid fa-paperclip ms-3" style="color:#aeb0b1;"></i></a>
+                                <a href="#"><i class="fa-solid fa-ellipsis-vertical ms-3" style="color: #aeb0b1;"></i></a>
+
+                            </div>
+
                         </div>
-                        <div class="d-flex flex-column">
-                            <p class="m-0">
-                                Michele
-                            </p>
-                            <span class="last-access">
-                                Ultimo accesso oggi alle 12:00
-                            </span>
-                        </div>
-                    </div>
-                    <div class="d-flex">
+                        <div v-else style="display: none;"></div>
 
-                        <a href="#"><i class="fa-solid fa-magnifying-glass ms-3" style="color:#aeb0b1;"></i></a>
-                        <a href="#"><i class="fa-solid fa-paperclip ms-3" style="color:#aeb0b1;"></i></a>
-                        <a href="#"><i class="fa-solid fa-ellipsis-vertical ms-3" style="color: #aeb0b1;"></i></a>
-
-                    </div>
-
-                </div>
+                    </div>    
                 <div class="message py-4 px-5">
                     <div class="row d-flex">
                         <div class="col-6 pe-5" style="margin-top: 9rem;">
