--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     <div class="row d-flex">
                         <div class="col-6 pe-5" style="margin-top: 9rem;">
                             <div class="white-message d-flex justify-content-between bg-white w-100 rounded-3 p-2 mb-2" v-for="message in contacts[selectedContactIndex].messages">
-                                <p class="m-0">{{ message.message }}</p>
+                                <p class="m-0"  v-if="message.status === 'sent'">{{ message.message }}</p>
                                 <div class="d-flex align-items-ends mt-3">
                                     <span class="last-message">
                                         12:00
@@ -144,7 +144,8 @@
 
                             <div class="d-flex justify-content-between green-message w-100 rounded-3 p-2 mb-2"  v-for="message in contacts[selectedContactIndex].messages">
                                 
-                                <p class="m-0">{{ message.message }}</p>
+                                
+                                <p class="m-0" v-if="message.status === 'received'">{{ message.message }}</p>
                                 <div class="d-flex align-items-ends mt-3">
                                     <span class="last-message">
                                         12:00
