--- a/index.html
+++ b/index.html
@@ -169,7 +169,8 @@
 
                     </div>
                     <div class="w-75 h-100 d-flex align-items-center">
-                        <input class="w-100 h-75 border-0 rounded-1 p-1" type="text" placeholder="Scrivi un messaggio" style="font-size: small;" v-model="newListMessage.message" @keyup.enter="onEnter">
+                        <input class="w-100 h-75 border-0 rounded-1 p-1" type="text" placeholder="Scrivi un messaggio" style="font-size: small;" v-model="newListMessage.message" @keyup.enter="onEnter(newListMessage)">
+                        
                     </div>
                     <div class="w-auto">
                         <i class="fa-solid fa-microphone" style="color: #9e9e9e;"></i>
