--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <!--devo implementare la ricerca input-->
 
 
-                        <input type="text" class="form-control" style="height: 24px; font-size: small; border: none;" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm" placeholder="Scrivi o inizia una nuova chat">
+                        <input type="text" class="form-control" style="height: 24px; font-size: small; border: none;" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm" placeholder="Scrivi o inizia una nuova chat" v-model="searchTerm">
                       
 
 
