--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+
     <link rel="stylesheet" href="css/style.css">
     <title>BOOLZAPP</title>
 </head>
@@ -134,7 +136,7 @@
 
                 </div>
                 <div class="message py-4 px-5" v-if="contacts[selectedContactIndex]">
-                    <div v-for="(message, index) in contacts[selectedContactIndex].messages">
+                    <div v-for="(message, date) in contacts[selectedContactIndex].messages">
 
                         <div class="row justify-content-end">
                             <div class="col-6 ps-5">
@@ -143,7 +145,7 @@
                                     <div class="d-flex justify-content-between green-message w-100 rounded-3 p-2 mb-2" v-if="message.status === 'sent'">
                                         <p class="m-0">{{ message.message }}</p>
                                         <div class="d-flex align-items-ends mt-3">
-                                            <span class="last-message">12:00</span>
+                                            <span class="last-message">{{ moment(message.date).format('HH:mm') }}</span>
                                         </div>
                                     </div>
                                     
@@ -158,7 +160,7 @@
                                     <div class="d-flex justify-content-between white-message w-100 rounded-3 p-2 mb-2" v-if="message.status === 'received'">
                                         <p class="m-0">{{ message.message }}</p>
                                         <div class="d-flex align-items-ends mt-3">
-                                            <span class="last-message">12:00</span>
+                                            <span class="last-message">{{ moment(message.date).format('HH:mm') }}</span>
                                         </div>
                                     </div>
                                     
